# vitatty

./: Cargo.toml  README.md  RENDERING.md
src/: char_manager.rs  default_pal.rs  font_rasterizer.rs  hello_cg.frag  hello_cg.vert  main.rs  neo_charmgr.rs  neo_tty_bg.frag  neo_tty_bg.vert  neo_tty_fg.frag  neo_tty_fg.vert  sh_program.rs  shader.rs  texture_debug.rs  tty.frag  tty16.vert  ttytrue.vert  vgl_allocator.rs
