[package]
name = "vitatty"
version = "0.1.0"
edition = "2024"

[dependencies]
gl = "0.14.0"
derive_more = { version = "2.1.1", features = ["from", "into"] }
bytemuck = { version = "1.24.0", features = ["derive"] }
psf2-font = { git = "https://github.com/LexiBigCheese/psf2-font", version = "0.1.1" }
glam = { version = "0.31.0", features = ["bytemuck"] }
vita_gl_helpers = { git = "https://github.com/LexiBigCheese/vita_gl_helpers", version = "0.1.0" }

[package.metadata.vita]
title_id = "VITATTY00"
title_name = "Terminal Emulator"
